_docs/v0.42/developers-guide/start.md
---
version: v0.42
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: false
category: 'Developers Guide'
title: Start
source_url: 'https://github.com/metabase/metabase/blob/master/docs/developers-guide/start.md'
layout: docs
---

# Developer's Guide

This guide contains detailed information on how to work on Metabase codebase.

## Contributing

- [How to contribute back to the Metabase project](contributing.html)

## Setup and build

- [How to set up a development environment](devenv.html)
- [How to run a development branch of Metabase using Docker](dev-branch-docker.html)
- [How to compile your own copy of Metabase](build.html)

## Working with the code

- [How to work with the frontend code](frontend.html)
- [How to add support in Metabase for other languages](internationalization.html)
- [Working with Clojure](clojure.html)

## Testing

- [How to write and run end-to-end tests](e2e-tests.html)
- [How to use visual tests](visual-tests.html)

## API documentation

- [Autogenerated API docs](../api-documentation.html)
- [Working with the Metabase API](https://www.metabase.com/learn/administration/metabase-api.html)
- [Driver Interface Changelog](driver-changelog.html)

## Database drivers

Learn how to write a driver to connect Metabase to your database.

- [Guide to writing a driver](drivers/start.html)
