_docs/v0.55/developers-guide/start.md
---
version: v0.55
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: false
category: 'Developers Guide'
title: 'Developer Guide'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/developers-guide/start.md'
layout: new-docs
redirect_from:
    - /docs/v0.55/developers-guide
---

# Developer Guide

This guide contains detailed information on how to work on Metabase codebase.

## Contributing

- [How to contribute back to the Metabase project](../CONTRIBUTING)

## Setup and build

- [How to set up a development environment](devenv)
- [How to run a development branch of Metabase using Docker](dev-branch-docker)
- [How to compile your own copy of Metabase](build)

## Working with the code

- [How to work with the frontend code](frontend)
- [How to add support in Metabase for other languages](internationalization)
- [Working with Clojure](clojure)
- [Annotated Clojure source code](https://metabase-dev-docs.github.io/)
- [Automating Common Tasks with MAGE](mage)

## Testing

- [How to write and run end-to-end tests](e2e-tests)
- [How to use visual tests](visual-tests)

## API documentation

- [Autogenerated API docs](../api)
- [Working with the Metabase API](/learn/metabase-basics/administration/administration-and-operation/metabase-api)
- [Driver Interface Changelog](driver-changelog)
- [MBQL Library Changelog](mbql-library-changelog)

## Database drivers

- [Community drivers](./community-drivers)
- [Guide to writing a driver](drivers/start)

## Metabase documentation

- [Developing Metabase documentation](./docs)

## Releases

- [Metabase release versioning](./versioning)
